--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,14 @@
 {
     "python.analysis.autoImportCompletions": true,
     "python.analysis.typeCheckingMode": "strict",
-    "python.defaultInterpreterPath": ".\\Python\\.venv\\Scripts\\python.exe",
-    "python.testing.pytestEnabled": true,
+    "python.defaultInterpreterPath": ".\\.venv\\Scripts\\python.exe",
+    "python.testing.pytestEnabled": false,
     "python.testing.unittestArgs": [
         "-v",
         "-s",
-        "./Python",
+        ".\\tests",
         "-p",
-        "*_tests.py"
+        "*test*.py"
     ],
     "python.testing.unittestEnabled": true,
 }
